added side panel

--- a/index.html
+++ b/index.html
@@ -12,18 +12,24 @@
     <div class="container">
         <div class="header">
             <div class="top">
-                <div>
+                <!-- <div>
                     <form action="" class="search-bar">
                         <input type="search" name="search" pattern=".*\S.*" required>
                         <button class="search-btn" type="submit">
                             <span>Search</span>
                         </button>
                     </form>
-                </div>
+                </div> -->
                 <div class="notifications">
+                    <form action="" class="search-bar">
+                        <input type="search" name="search" pattern=".*\S.*" required>
+                        <button class="search-btn" type="submit">
+                            <span>Search</span>
+                        </button>
+                    </form>
                     <i class="fa fa-solid fa-bell fa-xl"></i>
-                    <i class="fa fa-sharp fa-regular fa-bookmark fa-xl"></i>
-                    <i class="fa fa-duotone fa-paper-plane fa-xl"></i>
+                    <i class="fa fa-sharp fa-solid fa-bookmark fa-xl"></i>
+                    <i class="fa fa-sharp fa-inbox fa-xl"></i>
                 </div>
             </div>
             <div class="bottom">
@@ -34,7 +40,15 @@
             </div>
         </div>
         <div class="sidebar">
-            <div class="logo"></div>
+            <div class="picture">
+                <div class="logo"></div>
+            </div>
+            <div class="side-content">DASHBOARDS</div>
+            <div class="side-content">APPLICATIONS</div>
+            <div class="side-content">PAGES</div>
+            <div class="side-content">USER INTERFACE</div>
+            <div class="side-content">DOCUMENTATION</div>
+            <div class="side-content">NAVIGATION FEATURES</div>
         </div>
         <div class="main-content">
 
