fixed grid sections. Added first SVG to sidebar

--- a/index.html
+++ b/index.html
@@ -10,16 +10,8 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
+        <div class="main">
             <div class="top">
-                <!-- <div>
-                    <form action="" class="search-bar">
-                        <input type="search" name="search" pattern=".*\S.*" required>
-                        <button class="search-btn" type="submit">
-                            <span>Search</span>
-                        </button>
-                    </form>
-                </div> -->
                 <div class="notifications">
                     <form action="" class="search-bar">
                         <input type="search" name="search" pattern=".*\S.*" required>
@@ -38,20 +30,74 @@
                     </div>
                     <div class="profile-picture"></div>
             </div>
+            <div class="main-content">
+
+            </div>
         </div>
         <div class="sidebar">
             <div class="picture">
                 <div class="logo"></div>
             </div>
-            <div class="side-content">DASHBOARDS</div>
-            <div class="side-content">APPLICATIONS</div>
-            <div class="side-content">PAGES</div>
-            <div class="side-content">USER INTERFACE</div>
-            <div class="side-content">DOCUMENTATION</div>
-            <div class="side-content">NAVIGATION FEATURES</div>
-        </div>
-        <div class="main-content">
-
+            <div class="side-content first">DASHBOARDS
+                <div class="list-item"><a href="" class="project"><img class="project-svg" src="./views/SVG-files/clipboard-2.svg" alt=""> Project</a></div>
+                <div class="list-item">Analytics</div>
+                <div class="list-item">Finance</div>
+                <div class="list-item">Crypto</div>
+            </div>
+            <div class="side-content">APPLICATIONS
+                <div class="list-item">Academy</div>
+                <div class="list-item">Chat</div>
+                <div class="list-item">Contacts</div>
+                <div class="list-item">E-Commerce</div>
+                <div class="list-item">File Manger</div>
+                <div class="list-item">Help Center</div>
+                <div class="list-item">Mailbox</div>
+                <div class="list-item">Notes</div>
+                <div class="list-item">Scrumboard</div>
+                <div class="list-item">Tasks</div>
+            </div>
+            <div class="side-content">PAGES
+                <div class="list-item">Activities</div>
+                <div class="list-item">Authentication</div>
+                <div class="list-item">Coming Soon</div>
+                <div class="list-item">Error</div>
+                <div class="list-item">Invoice</div>
+                <div class="list-item">Maintenance</div>
+                <div class="list-item">Pricing</div>
+                <div class="list-item">Profile</div>
+                <div class="list-item">Settings</div>
+            </div>
+            <div class="side-content">USER INTERFACE
+                <div class="list-item">Material Components</div>
+                <div class="list-item">Fuse Components</div>
+                <div class="list-item">Other Components</div>
+                <div class="list-item">TailwindCSS</div>
+                <div class="list-item">Advanced Search</div>
+                <div class="list-item">Animations</div>
+                <div class="list-item">Cards</div>
+                <div class="list-item">Colors</div>
+                <div class="list-item">Confirmation Dialog</div>
+                <div class="list-item">Datatable</div>
+                <div class="list-item">Forms</div>
+                <div class="list-item">Icons</div>
+                <div class="list-item">Page Layouts</div>
+                <div class="list-item">Typography</div>
+            </div>
+            <div class="side-content">DOCUMENTATION
+                <div class="list-item">Changelog</div>
+                <div class="list-item">Guides</div>
+            </div>
+            <div class="side-content">NAVIGATION FEATURES
+                <div class="list-item">Level 0</div>
+                <div class="list-item">Level 1</div>
+                <div class="list-item">Active item</div>
+                <div class="list-item">Disabled collapsable</div>
+                <div class="list-item">Disabled basic</div>
+                <div class="list-item">Oval badge</div>
+                <div class="list-item">Rectangle badge</div>
+                <div class="list-item">Rounded badge</div>
+                <div class="list-item">Simple badge</div>
+            </div>
         </div>
     </div>
 </body>
