added SVG files to dashboard

--- a/index.html
+++ b/index.html
@@ -19,15 +19,13 @@
                             <span>Search</span>
                         </button>
                     </form>
-                    <i class="fa fa-solid fa-bell fa-xl"></i>
-                    <i class="fa fa-sharp fa-solid fa-bookmark fa-xl"></i>
-                    <i class="fa fa-sharp fa-inbox fa-xl"></i>
+                    <div class="notification-button"><i class="fa fa-solid fa-bell fa-xl"></i></div>
+                    <div class="notification-button"><i class="fa fa-sharp fa-solid fa-bookmark fa-xl"></i></div>
+                    <div class="notification-button"><i class="fa fa-sharp fa-inbox fa-xl"></i></div>
                 </div>
             </div>
             <div class="bottom">
-                    <div>
-                        Welcome back, Kevin!
-                    </div>
+                <h3>Welcome back, Kevin</h3>
                     <div class="profile-picture"></div>
             </div>
             <div class="main-content">
@@ -39,64 +37,208 @@
                 <div class="logo"></div>
             </div>
             <div class="side-content first">DASHBOARDS
-                <div class="list-item"><a href="" class="project"><img class="project-svg" src="./views/SVG-files/clipboard-2.svg" alt=""> Project</a></div>
-                <div class="list-item">Analytics</div>
-                <div class="list-item">Finance</div>
-                <div class="list-item">Crypto</div>
+                <div class="list-item">
+                    <img class="image" src="./views/SVG-files/clipboard-2.svg" alt="">
+                    <a href="" class="link"> Project</a>
+                </div>
+                <div class="list-item">
+                    <img class="image" src="./views/SVG-files/analytics.svg" id="analytics" alt="">
+                    <a href="" class="link"> Analytics</a>
+                </div>
+                <div class="list-item">
+                    <img class="image" src="./views/SVG-files/finance.svg" alt="">
+                    <a href="" class="link">Finance</a>
+                </div>
+                <div class="list-item">
+                    <img class="image" src="./views/SVG-files/crypto.svg" alt="">
+                    <a href="" class="link">Crypto</a>
+                </div>
             </div>
             <div class="side-content">APPLICATIONS
-                <div class="list-item">Academy</div>
-                <div class="list-item">Chat</div>
-                <div class="list-item">Contacts</div>
-                <div class="list-item">E-Commerce</div>
-                <div class="list-item">File Manger</div>
-                <div class="list-item">Help Center</div>
-                <div class="list-item">Mailbox</div>
-                <div class="list-item">Notes</div>
-                <div class="list-item">Scrumboard</div>
-                <div class="list-item">Tasks</div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/academy.svg" alt="" class="image">
+                    <a href="" class="link">Academy</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/chat.svg" alt="" class="image">
+                    <a href="" class="link">Chat</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/contacts.svg" alt="" class="image">
+                    <a href="" class="link">Contacts</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/shopping-cart.svg" alt="" class="image">
+                    <a href="" class="link">E-Commerce</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/file-manager.svg" alt="" class="image">
+                    <a href="" class="link">File Manager</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/help.svg" alt="" class="image">
+                    <a href="" class="link">Help Center</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/mailbox.svg" alt="" class="image">
+                    <a href="" class="link">Mailbox</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/notes.svg" alt="" class="image">
+                    <a href="" class="link">Notes</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/scrumboard.svg" alt="" class="image">
+                    <a href="" class="link">Scrumboard</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/tasks.svg" alt="" class="image">
+                    <a href="" class="link">Tasks</a>
+                </div>
             </div>
             <div class="side-content">PAGES
-                <div class="list-item">Activities</div>
-                <div class="list-item">Authentication</div>
-                <div class="list-item">Coming Soon</div>
-                <div class="list-item">Error</div>
-                <div class="list-item">Invoice</div>
-                <div class="list-item">Maintenance</div>
-                <div class="list-item">Pricing</div>
-                <div class="list-item">Profile</div>
-                <div class="list-item">Settings</div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/activities.svg" alt="" class="image">
+                    <a href="" class="link">Activities</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/authentication.svg" alt="" class="image">
+                    <a href="" class="link">Authentication</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/coming-soon.svg" alt="" class="image">
+                    <a href="" class="link"> Coming Soon</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/error.svg" alt="" class="image">
+                    <a href="" class="link"> Error</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/invoice.svg" alt="" class="image">
+                    <a href="" class="link">Invoice</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/maintenance.svg" alt="" class="image">
+                    <a href="" class="link"> Maintenance</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/pricing.svg" alt="" class="image">
+                    <a href="" class="link"> Pricing</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/profile.svg" alt="" class="image">
+                    <a href="" class="link"> Profile</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/settings.svg" alt="" class="image">
+                    <a href="" class="link"> Settings</a>
+                </div>
             </div>
             <div class="side-content">USER INTERFACE
-                <div class="list-item">Material Components</div>
-                <div class="list-item">Fuse Components</div>
-                <div class="list-item">Other Components</div>
-                <div class="list-item">TailwindCSS</div>
-                <div class="list-item">Advanced Search</div>
-                <div class="list-item">Animations</div>
-                <div class="list-item">Cards</div>
-                <div class="list-item">Colors</div>
-                <div class="list-item">Confirmation Dialog</div>
-                <div class="list-item">Datatable</div>
-                <div class="list-item">Forms</div>
-                <div class="list-item">Icons</div>
-                <div class="list-item">Page Layouts</div>
-                <div class="list-item">Typography</div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/components.svg" alt="" class="image">
+                    <a href="" class="link">Material Components</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/components.svg" alt="" class="image">
+                    <a href="" class="link">Fuse Components</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/components.svg" alt="" class="image">
+                    <a href="" class="link">Other Components</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/tailwindcss.svg" alt="" class="image">
+                    <a href="" class="link">TailwindCSS</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/advanced-search.svg" alt="" class="image">
+                    <a href="" class="link">Advanced Search</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/animations.svg" alt="" class="image">
+                    <a href="" class="link">Animations</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/cards.svg" alt="" class="image">
+                    <a href="" class="link">Cards</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/colors.svg" alt="" class="image">
+                    <a href="" class="link">Colors</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/confirmation-dialog.svg" alt="" class="image">
+                    <a href="" class="link">Confirmation Dialog</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/datatable.svg" alt="" class="image">
+                    <a href="" class="link">Datatable</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/forms.svg" alt="" class="image">
+                    <a href="" class="link">Forms</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/icons.svg" alt="" class="image">
+                    <a href="" class="link">Icons</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/page-layouts.svg" alt="" class="image">
+                    <a href="" class="link">Page Layouts</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/typography.svg" alt="" class="image">
+                    <a href="" class="link">Typography</a>
+                </div>
             </div>
             <div class="side-content">DOCUMENTATION
-                <div class="list-item">Changelog</div>
-                <div class="list-item">Guides</div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/changelog.svg" alt="" class="image">
+                    <a href="" class="link">Changelog</a>
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/guides.svg" alt="" class="image">
+                    <a href="" class="link">Guides</a>
+                </div>
             </div>
             <div class="side-content">NAVIGATION FEATURES
-                <div class="list-item">Level 0</div>
-                <div class="list-item">Level 1</div>
-                <div class="list-item">Active item</div>
-                <div class="list-item">Disabled collapsable</div>
-                <div class="list-item">Disabled basic</div>
-                <div class="list-item">Oval badge</div>
-                <div class="list-item">Rectangle badge</div>
-                <div class="list-item">Rounded badge</div>
-                <div class="list-item">Simple badge</div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/check.svg" alt="" class="image">
+                    Level 0
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/check.svg" alt="" class="image">
+                    Level 1
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/check.svg" alt="" class="image">
+                    Active item
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/check.svg" alt="" class="image">
+                    Disabled collapsable
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/check.svg" alt="" class="image">
+                    Disabled basic
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/tag.svg" alt="" class="image">
+                    Oval badge
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/tag.svg" alt="" class="image">
+                    Rectangle badge
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/tag.svg" alt="" class="image">
+                    Rounded badge
+                </div>
+                <div class="list-item">
+                    <img src="./views/SVG-files/check.svg" alt="" class="image">
+                    Simple badge
+                </div>
             </div>
         </div>
     </div>
