fixed header and main content positioning

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./views/SVG-files/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./views/SVG-files/favicon.ico" type="image/x-icon">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+      </style>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.css">
     <title>Admin Dashboard</title>
@@ -23,16 +28,30 @@
                     <div class="notification-button"><i class="fa fa-sharp fa-solid fa-bookmark fa-xl"></i></div>
                     <div class="notification-button"><i class="fa fa-sharp fa-inbox fa-xl"></i></div>
                 </div>
-            </div>
-            <div class="bottom">
-                <h3>Welcome back, Kevin</h3>
-                    <div class="profile-picture"></div>
+                <div class="bottom">
+                    <div class="headline">
+                        <div class="pic">
+                            <div class="profile-picture"></div>
+                        </div>
+                        <div class="headline-message">
+                            <h1>Welcome back, Kevin</h1>
+                            <div class="small-headline">
+                                <img src="./views/SVG-files/bell.svg" alt="">
+                                <p>You have 5 new messages and 8 new tasks</p>    
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="main-content">
-
+                <div class="content">test</div>
+                <div class="content">test</div>
+                <div class="content">test</div>
+                <div class="content">test</div>
             </div>
         </div>
-        <div class="sidebar">
+        <div class="sidebar" onmouseover="this.style.overflow='auto'"
+        onmouseout="this.style.overflow='hidden'">
             <div class="picture">
                 <div class="logo"></div>
             </div>
