finished the main body content and CSS edits

--- a/index.html
+++ b/index.html
@@ -44,10 +44,58 @@
                 </div>
             </div>
             <div class="main-content">
-                <div class="content">test</div>
-                <div class="content">test</div>
-                <div class="content">test</div>
-                <div class="content">test</div>
+                <div class="small-r">
+                    <div class="content">
+                        <div class="content-top">
+                            <div>Summary</div>
+                            <div><img src="./views/SVG-files/dots.svg" alt=""></div>
+                        </div>
+                        <div class="jobs">
+                            <div class="number job-1">32</div>
+                            <div class="job-1">Due Tasks</div>
+                            <div class="status">Completed: 10</div>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <div class="content-top">
+                            <div>Overdue</div>
+                            <div><img src="./views/SVG-files/dots.svg" alt=""></div>
+                        </div>
+                        <div class="jobs">
+                            <div class="number job-2">16</div>
+                            <div class="job-2">Tasks</div>
+                            <div class="status">From yesterday: 7</div>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <div class="content-top">
+                            <div>Issues</div>
+                            <div><img src="./views/SVG-files/dots.svg" alt=""></div>
+                        </div>
+                        <div class="jobs">
+                            <div class="number job-3">21</div>
+                            <div class="job-3">Open</div>
+                            <div class="status">Closed today: 19</div>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <div class="content-top">
+                            <div>Features</div>
+                            <div><img src="./views/SVG-files/dots.svg" alt=""></div>
+                        </div>
+                        <div class="jobs">
+                            <div class="number job-4">27</div>
+                            <div class="job-4">Proposals</div>
+                            <div class="status">Implemented: 16</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="large-r">
+                    <div class="graph">
+                        <div class="summary">Overall Summary</div>
+                        <img src="./views/SVG-files/graph.svg" alt="" class="graph-chart">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="sidebar" onmouseover="this.style.overflow='auto'"
