--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                             <span>Search</span>
                         </button>
                     </form>
-                    <div class="notification-button"><i class="fa fa-solid fa-bell fa-xl"></i></div>
-                    <div class="notification-button"><i class="fa fa-sharp fa-solid fa-bookmark fa-xl"></i></div>
-                    <div class="notification-button"><i class="fa fa-sharp fa-inbox fa-xl"></i></div>
+                    <div class="notification-button"><i class="fa-solid fa-bell"></i></div>
+                    <div class="notification-button"><i class="fa-solid fa-bookmark"></i></div>
+                    <div class="notification-button"><i class="fa-solid fa-inbox"></i></div>
                 </div>
                 <div class="bottom">
                     <div class="headline">
